# PB_studio_Rebuild

./: .coverage  .env.example  .gitattributes  .gitignore  .gitmodules  AGENTS.md  BACKUP_INSTRUCTIONS.md  BUG_REPORT_2026_04_10.md  CANONICAL_WORKSPACE.md  CHANGELOG.md  CLAUDE.md  CLEANUP_LOG.md  CODE_AUDIT_REPORT_2026-04-02.md  DEPLOYMENT_LOG.md  E2E_TEST_REPORT.md  GEMINI.md  GPU_FIX_PERMISSIONS.bat  GRAND_AUDIT_REPORT.md  HILFE_GEMINI_CLI.txt  LICENSE.txt  LICENSES.md  PBStudio_Gemma4_Arbeitsplan.md  PERFORMANCE_PROFILE.md  QA_BUG_REPORT_v0.5.0.md  QA_STATISTICS.txt  README.md  SECURITY_SCAN_SUMMARY.md  STARTUP.md  STATUS_REPORT_2026-05-09.md  THIRD_PARTY_LICENSES.txt  TODO_STUDIO_BRAIN.md  WARMUP_IMPLEMENTATION.md  agent_und_gpu_fix.md  alembic.ini  anchor_und_autoedit_bericht.md  architektur_konzept_v2.md  bandit.yaml  commit_msg.txt  configure_ollama.py  database.py  (+57 more)
.github/: copilot-instructions.md  pull_request_template.md
.opencode/: AGENTS.md
Agent_Tests/: 00_Basis_Regeln.md  01_Setup_und_Parameter.md  02_Test_Projekt_und_Import.md  03_Test_Audio_Analyse.md  04_Test_Video_Analyse.md  05_Test_Schnitt_AutoEdit.md  06_Test_Export.md  07_Test_End2End.md  E2E_RUNBOOK_2026-06-25.md  GUI_PLAYBOOK_FROM_USER_RUN_2026-06-24.md  MANUELLE_TESTLISTE_2026-06-24.md  README.md  run_e2e_verification.py
agents/: __init__.py  audio_agent.py  base_agent.py  editor_agent.py  orchestrator_agent.py  pacing_agent.py  vision_agent.py
config/: enrichment_rules.yaml  ffmpeg_identity.json  mood_anchors.npz  mood_anchors_v1.yaml  pacing_rules.yaml  pacing_weights.yaml
database/: __init__.py  migrations.py  models.py  session.py
demos/: QUICK_START.md  README.md
docs/: ARCHITECTURE.md  AUDIT_REPORT_VAD54.md  BUG_logging_second_cause.md  CUDA_FIX_PLAN_VAD59.md  CUDA_VERIFICATION_REPORT_VAD59.md  DEPLOYMENT.md  FEEDBACK_CHANNELS.md  FULL_AUDIT_PLAN_2026-03-27.md  GEMMA_PLAN.md  GRAND_AUDIT_PHASE4_2026-03-27.md  GRAND_AUDIT_REPORT_2026-03-27.md  GUI_NAVIGATION_PLAYBOOK.md  GUI_TEST_MATRIX.md  HANDOVER_B302_2026-05-31.md  JSON_MIGRATION.md  PB_Studio_App_Beschreibung.md  PB_Studio_App_Beschreibung_Detailed.md  PB_Studio_Architektur_Bericht_2026-05-23.md  PHASE4_COMPLETION_REPORT.md  PRODUCTION_CONFIG.md  REAL_DATA_TESTBERICHT_2026-04-13.md  REFACTORING_PLAN.md  ROADMAP.md  SESSION_MONITORING_UND_ANALYSE.md  SUPPORT.md  SUPPORT_PLAYBOOK.md  TECH_STACK_ANALYSIS_VAD59.md  VERIFY_HANDOVER_2026-05-29.md  machbarkeitsstudie_graph_system.md  pacing_logic_phd.md  plan_graph_system_implementation.md  ui_redesign_v2.html
installer/: DEPLOYMENT_CHECKLIST.md  build_installer.bat  pb_studio.nsi  pre_cache_models.py  prune_pyinstaller_dist.py  setup_environment.bat  smoke_test.py  version_info.txt
knowledge/: audio_analysis.md  dj_set_structure.md  pacing_rules.md  pb_studio_capabilities.md  video_matching.md
outputs/: pytest_brain_v3_results.txt
pb_packaging/: __init__.py  bundle_hooks.py
resources/: styles.qss
scripts/: batch_embed_all_clips.py  build_pacing_truth_set.py  build_test_fixture.py  bypass_setup.py  check_cuda_dll.py  check_gpu_health.py  check_ml_inventory.py  cuda_diag.py  cuda_recovery.ps1  cuda_tdr_config.ps1  debug_imports.py  debug_system_check.py  deep_integrity_check.py  demo_pacing_v2.py  diagnose_cuda.py  download_beat_weights.py  eval_shot_type_prompts.py  find_material_tabs.py  fix_gpu_setup.py  generate_golden_decisions.py  generate_icon.py  generate_mood_anchors.py  generate_pacing_baseline.py  generate_test_dj_mix.py  gui_audio_import.py  gui_audio_import_win32.py  gui_nav_audio.py  gui_nav_material.py  gui_nav_project.py  gui_switch_material.py  gui_video_import.py  gui_video_import_final.py  hardware_diag.py  main_diag.py  map_gui.py  nuclear_cleanup.py  phase1_cache_test.py  phase1_import_test.py  phase_e_pipeline_smoke.py  phase_e_smoke_boot.py  (+26 more)
services/: ERROR_HANDLING.md  README.md  action_registry.py  ai_audio_service.py  analysis_status_service.py  anchor_sync_service.py  audio_classify_service.py  audio_constants.py  audio_service.py  auto_edit_worker.py  av_pacing_service.py  backup_service.py  beat_analysis_service.py  bounded_call.py  brain_service.py  cockpit_orchestrator.py  conversation_memory.py  convert_service.py  deferred_gates.py  errors.py  export_service.py  feedback_service.py  ffmpeg_utils.py  gpu_info.py  ingest_service.py  key_detection_service.py  knowledge_loader.py  llm_service.py  local_agent_service.py  lufs_service.py  model_benchmark.py  model_lifecycle_service.py  model_load_status.py  model_manager.py  model_manager_temp.py  model_router.py  model_warmup.py  nvenc_policy.py  ollama_client.py  ollama_service.py  (+35 more)
styles/: dark_steel.qss
test-report/: ORCHESTRATOR-FINAL-REPORT.md
test_reports/: B471_REKORDBOX_WAVEFORM_FOLLOWUP_2026-06-07.md  B471_TIMELINE_GAP_REPAIR_2026-06-09.md  B471_TIMELINE_LAYOUT_RECOVERY_2026-06-07.md  B471_TIMELINE_RECOVERY_LIVE_ATTEMPT_2026-06-07.md  LIVE_VERIFY_OTK021_DG001_2026-06-22.md  TEST_REPORT_GUI_E2E_2026-05-16.md  TEST_REPORT_GUI_E2E_2026-06-02.md  TEST_REPORT_GUI_E2E_CONTINUATION_2026-06-02.md  b471_db_timeline_build_after_waveform_fix.json  b471_live_test55655.json  b471_live_test55655_layout_recovery.json  otk014_b336_siglip_precision_20260609.md  otk014_b337_schnitt_inspector_live.py  otk014_b337_schnitt_inspector_live_20260609.json  otk014_b338_preflight_format_live.py  otk014_b338_preflight_format_live_20260609.json
tests/: ai_audio_test_results.json  analyze_freezes.py  conftest.py  create_test_audio.py  db_cleanup.py  e2e_audio_pipeline_orchestrator.py  e2e_full_render.py  e2e_functional_test.py  e2e_real_test.py  e2e_stresstest.py  find_analyse_btn.py  functional_steer_tab_memory_loop.py  gui_db_inspector.py  gui_e2e_autonomous.py  gui_e2e_dj_mix_pipeline.py  gui_harness.py  live_gui_autonomous_verify.py  live_ollama_integration_test.py  run_db.ps1  run_final_test.py  run_harness.ps1  run_phase1_automation.py  smoke_test_app.py  swarm_test_results.json  test_action_registry.py  test_ai_audio_real.py  test_anchor_sync_service.py  test_audio_analysis_real.py  test_audio_service.py  (+34 more)
(+1604 files in other folders)
