[tool.poetry]
name = "pb-studio-rebuild"
version = "0.5.0"
description = "DaVinci Resolve Style Video/Audio Production Studio"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pyside6 = ">=6.8.0,<7.0.0"
sqlalchemy = ">=2.0.40,<3.0.0"
alembic = ">=1.13.0,<2.0.0"
librosa = ">=0.11.0,<0.12.0"
numpy = ">=2.1.0,<3.0.0"
demucs = ">=4.0.1,<5.0.0"
opencv-python = ">=4.10.0,<5.0.0"
scipy = ">=1.14.0,<2.0.0"
transformers = ">=4.47.0,<6.0.0"
thefuzz = ">=0.22.1,<0.23.0"
einops = ">=0.8.0,<0.9.0"
pillow = ">=11.0.0,<13.0.0"
accelerate = ">=1.2.0,<2.0.0"
opentimelineio = ">=0.18.0,<1.0.0"
pyarrow = ">=18.0.0,<24.0.0"
python-dotenv = ">=1.0.0,<2.0.0"
scenedetect = ">=0.6.0,<1.0.0"
sounddevice = ">=0.5.0,<1.0.0"
soundfile = ">=0.12.0,<1.0.0"
click = ">=8.0.0,<8.4.0"  # P3-FIX: Lower bound added for stability
# P2.12: git-pin is necessary as no stable tagged release exists on PyPI. Vendorized for stability.
beat-this = {path = "vendor/beat_this", develop = false}
# H-24 FIX: Aligned with requirements.txt (torch 2.5.1+cu124) to prevent version/CUDA conflicts
torch = {version = ">=2.5.0,<2.6.0", source = "pytorch", markers = "sys_platform == 'win32' or sys_platform == 'linux'"}
torchvision = {version = ">=0.20.0,<0.21.0", source = "pytorch", markers = "sys_platform == 'win32' or sys_platform == 'linux'"}
torchaudio = {version = ">=2.5.0,<2.6.0", source = "pytorch", markers = "sys_platform == 'win32' or sys_platform == 'linux'"}

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2,<10.0.0"
ruff = ">=0.9.0,<1.0.0"
bandit = ">=1.8.0,<2.0.0"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git", "__pycache__", "dist", "build", ".venv",
    "tests/", "installer/", "scripts/",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module-level import not at top of file (common in PySide6 apps)
    "F401",   # imported but unused (too noisy during refactoring)
]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["E402"]
"start_pb_studio.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gui: marks tests that require a display (deselect with -m 'not gui')",
    "e2e: marks end-to-end tests (deselect with -m 'not e2e')",
    "slow: marks slow tests (deselect with -m 'not slow')",
]

[[tool.poetry.source]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
