[tool.poetry]
name = "pb-studio-rebuild"
version = "0.5.0"
description = "DaVinci Resolve Style Video/Audio Production Studio"
authors = ["Your Name <you@example.com>"]
package-mode = false

# MEDIUM-11: Dual-Python Strategie dokumentiert:
# - Python 3.11 + torch 2.5.1+cu124: Standard-Setup (requirements.txt)
# - Python 3.10 + torch 1.12.1+cu113: Surface Book 2 / Treiber 461.40 (requirements-py310-cu113.txt)
# pyproject.toml definiert die PRIMARY (3.11) Constraints.
# Fuer Python 3.10 Setup: .venv310/Scripts/python.exe nutzen.
[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pyside6 = ">=6.6.0,<7.0.0"
sqlalchemy = ">=2.0.20,<3.0.0"
alembic = ">=1.13.0,<2.0.0"
librosa = ">=0.10.0,<0.12.0"
numpy = ">=1.24.0,<3.0.0"
demucs = ">=4.0.1,<5.0.0"
opencv-python = ">=4.8.0,<5.0.0"
scipy = ">=1.11.0,<2.0.0"
transformers = ">=4.35.0,<5.0.0"
thefuzz = ">=0.22.1,<0.23.0"
einops = ">=0.8.0,<0.9.0"
pillow = ">=10.0.0,<13.0.0"
accelerate = ">=0.27.0,<2.0.0"
opentimelineio = ">=0.17.0,<1.0.0"
pyarrow = ">=14.0.0,<24.0.0"
python-dotenv = ">=1.0.0,<2.0.0"
scenedetect = ">=0.6.0,<1.0.0"
sounddevice = ">=0.5.0,<1.0.0"
soundfile = ">=0.12.0,<1.0.0"
click = ">=8.0.0,<8.4.0"
# LOW-18: Vendored von git commit c8c320e (CPJKU/beat_this).
# Bei Updates: vendor/beat_this aktualisieren UND requirements.txt git-pin anpassen.
beat-this = {path = "vendor/beat_this", develop = false}
# Torch-Versions sind Setup-abhaengig — siehe requirements*.txt
torch = {version = ">=1.10.0", source = "pytorch", markers = "sys_platform == 'win32' or sys_platform == 'linux'"}
torchvision = {version = ">=0.11.0", source = "pytorch", markers = "sys_platform == 'win32' or sys_platform == 'linux'"}
torchaudio = {version = ">=0.10.0", source = "pytorch", markers = "sys_platform == 'win32' or sys_platform == 'linux'"}

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2,<10.0.0"
ruff = ">=0.9.0,<1.0.0"
bandit = ">=1.8.0,<2.0.0"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".git", "__pycache__", "dist", "build", ".venv", ".venv310",
    "tests/", "installer/", "scripts/",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module-level import not at top of file (common in PySide6 apps)
    "F401",   # imported but unused (too noisy during refactoring)
]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["E402"]
"start_pb_studio.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gui: marks tests that require a display (deselect with -m 'not gui')",
    "e2e: marks end-to-end tests (deselect with -m 'not e2e')",
    "slow: marks slow tests (deselect with -m 'not slow')",
]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu113"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
