[tool.poetry]
name = "pb-studio-rebuild"
version = "0.5.0"
description = "DaVinci Resolve Style Video/Audio Production Studio"
authors = ["Your Name <you@example.com>"]
package-mode = false

# Aktive Ziel-Runtime (D-040): Python 3.10 + torch 1.12.1+cu113
# auf NVIDIA GTX 1060 / CUDA 11.3. Installation erfolgt ueber
# requirements-py310-cu113.txt / environment.yml.
# requirements.txt bleibt Legacy/Future-Referenz fuer Python 3.11+cu124
# und ist nicht der aktive GTX-1060-Setup-Pfad.
[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pyside6 = ">=6.6.0,<7.0.0"
sqlalchemy = ">=2.0.20,<3.0.0"
alembic = ">=1.13.0,<2.0.0"
librosa = ">=0.10.0,<0.12.0"
numpy = ">=1.24.0,<3.0.0"
demucs = ">=4.0.1,<5.0.0"
opencv-python = ">=4.8.0,<5.0.0"
scipy = ">=1.11.0,<2.0.0"
transformers = ">=4.35.0,<5.0.0"
thefuzz = ">=0.22.1,<0.23.0"
einops = ">=0.8.0,<0.9.0"
pillow = ">=10.0.0,<13.0.0"
accelerate = ">=0.27.0,<2.0.0"
opentimelineio = ">=0.17.0,<1.0.0"
pyarrow = ">=14.0.0,<24.0.0"
python-dotenv = ">=1.0.0,<2.0.0"
scenedetect = ">=0.6.0,<1.0.0"
sounddevice = ">=0.5.0,<1.0.0"
soundfile = ">=0.12.0,<1.0.0"
click = ">=8.0.0,<8.4.0"
# LOW-18: Vendored von git commit c8c320e (CPJKU/beat_this).
# Bei Updates: vendor/beat_this aktualisieren UND aktive Runtime-Pins in
# requirements-py310-cu113.txt pflegen; requirements.txt nur synchron halten,
# wenn der Legacy/Future-cu124-Pfad bewusst aktualisiert wird.
beat-this = {path = "vendor/beat_this", develop = false}
# Torch-Versions sind Setup-abhaengig — siehe requirements*.txt
torch = {version = ">=1.10.0", source = "pytorch", markers = "sys_platform == 'win32' or sys_platform == 'linux'"}
torchvision = {version = ">=0.11.0", source = "pytorch", markers = "sys_platform == 'win32' or sys_platform == 'linux'"}
torchaudio = {version = ">=0.10.0", source = "pytorch", markers = "sys_platform == 'win32' or sys_platform == 'linux'"}
# === Studio Brain ===
umap-learn = ">=0.5,<0.6"
pyqtgraph = ">=0.13,<0.14"
networkx = ">=3.0,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2,<10.0.0"
ruff = ">=0.9.0,<1.0.0"
bandit = ">=1.8.0,<2.0.0"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".git", "__pycache__", "dist", "build", ".venv", ".venv310",
    "tests/", "installer/", "scripts/",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module-level import not at top of file (common in PySide6 apps)
    "E401",   # multiple imports on one line (legacy inline imports)
    "E701",   # one-line branches are common in legacy UI callbacks
    "E702",   # semicolon-separated statements in legacy math/UI code
    "F401",   # imported but unused (too noisy during refactoring)
    "F541",   # f-string without placeholders (legacy UI logging strings)
    "F811",   # redefinitions from local lazy imports in monolith modules
    "F821",   # forward-ref type names used without runtime imports
    "F841",   # assigned-but-unused locals in diagnostic legacy code
    "I001",   # import ordering is intentionally loose in legacy Qt modules
    "E741",   # short math variable names are common in signal/stack code
    "W291",   # trailing whitespace is legacy noise
    "W293",   # whitespace-only blank lines are legacy noise
]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["E402"]
"start_pb_studio.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# B-183: Stand-alone-Runner-Skripte (test_* Funktionsname, aber per python direkt
# auszuführen) aus pytest-Collect ausschließen. Header dieser Files dokumentiert
# expliziten manuellen Aufruf. addopts setzt --ignore-Flags pro Datei, weil
# collect_ignore nur in conftest.py funktioniert (nicht in pyproject.toml).
#
# Manual heavy-suite commands:
#   pytest tests/test_db_deep.py -v
#   pytest tests/live_ollama_integration_test.py -v
#   pytest tests/test_services/test_video_pipeline_e2e_live.py -m live_gpu -v
addopts = "--ignore=tests/e2e_functional_test.py --ignore=tests/functional_steer_tab_memory_loop.py --ignore=tests/gui_db_inspector.py --ignore=tests/live_ollama_integration_test.py --ignore=tests/test_db_deep.py"
markers = [
    "gui: marks tests that require a display (deselect with -m 'not gui')",
    "e2e: marks end-to-end tests (deselect with -m 'not e2e')",
    "slow: marks slow tests (deselect with -m 'not slow')",
    "spike: marks exploratory dependency or model experiments outside the default green suite",
    "live_gpu: marks tests that load real GPU models (skip with -m 'not live_gpu')",
    "long_form: marks long-form video/audio tests (e.g. 4h files, skip with -m 'not long_form')",
]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu113"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
